--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.lightningfastst.recorder">
 
+    <uses-sdk android:minSdkVersion="22"
+        android:targetSdkVersion="29" />
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
