--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) 2017 The LineageOS Project
+  * Copyright (C) 2017-2020 The LightningFastRom
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -17,23 +18,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.lightningfastst.recorder">
 
-    <uses-sdk android:minSdkVersion="22"
-        android:targetSdkVersion="29" />
+    <uses-sdk android:minSdkVersion="26"
+        android:targetSdkVersion="29"
+        android:maxSdkVersion="30"/>
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <supports-screens android:resizeable="true" />
     <!-- This is needed for aosp build env -->
     <uses-sdk tools:ignore="GradleOverrides" />
 
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:appCategory="audio"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
@@ -42,7 +46,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleInstance"
-            android:configChanges="uiMode">
+            android:configChanges="uiMode|screenSize|orientation|density|fontScale|touchscreen|layoutDirection|navigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.PHONE_STATE" />
