Recorder: List all Recordings.
Good for now, Needs some more tweaking.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <supports-screens android:resizeable="true" />
     <!-- This is needed for aosp build env -->
     <uses-sdk tools:ignore="GradleOverrides" />
