--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (c) 2017-2021 The LineageOS Project
+<!-- Copyright (c) 2017-2021 The lightning Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,7 +15,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.lineageos.recorder">
+    package="org.lightning.recorder">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -42,7 +42,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.PHONE_STATE" />
                 <action android:name="android.provider.MediaStore.RECORD_SOUND" />
-                <action android:name="org.lineageos.recorder.server.display.SCAN" />
+                <action android:name="org.lightning.recorder.server.display.SCAN" />
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -70,10 +70,10 @@
             android:name=".service.SoundRecorderService"
             android:exported="false">
             <intent-filter>
-                <action android:name="org.lineageos.recorder.service.START" />
-                <action android:name="org.lineageos.recorder.service.STOP" />
-                <action android:name="org.lineageos.recorder.service.PAUSE" />
-                <action android:name="org.lineageos.recorder.service.RESUME" />
+                <action android:name="org.lightning.recorder.service.START" />
+                <action android:name="org.lightning.recorder.service.STOP" />
+                <action android:name="org.lightning.recorder.service.PAUSE" />
+                <action android:name="org.lightning.recorder.service.RESUME" />
             </intent-filter>
         </service>
     </application>
