Recorder: update UI theme
- Remove the unused color.
- Fix DialogActivity theme.
- Simplify Dialog code.
- Update Icons color accordingly.
- Delate unused drewables

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <activity
             android:name=".DialogActivity"
             android:excludeFromRecents="true"
-            android:theme="@style/AppTheme.DialogActivity" />
+            android:theme="@style/DialogActivity" />
 
         <!-- Sound recorder -->
         <service
